--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <font face ="Comic Sans MS">
 <h1>OH NO! DENNIS WENT BACK TO TAIWAN!</h1>
 <h3>While you wait for Dennis to fix this, watch this video here!</h3>
-
-
-
+<br>
+<br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/wPrV3FSy3po" frameborder="0" allowfullscreen></iframe>
 
 </center>
 </body>
