--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <center>
 <font face ="Comic Sans MS">
 <h1>OH NO! DENNIS WENT BACK TO TAIWAN!</h1>
-<h3>Somehow, you ended up making it to our fallback server... maybe the server has too much traffic? Either way, for now, you will see this page until our autobalencer decides you can have the honor of visiting the real dennis for wan show! So in the meantime, WATCH THIS!</h3>
+<h3>Somehow, you ended up making it to our fallback server... maybe the server has too much traffic? <br>Either way, for now, you will see this page until our autobalencer decides you can have the honor of visiting the real dennis for wan show! So in the meantime, WATCH THIS!</h3>
 <br>
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/wPrV3FSy3po" frameborder="0" allowfullscreen></iframe>
