--- a/test.html
+++ b/test.html
@@ -1,4 +1,17 @@
 <!DOCTYPE html>
+<script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDtMM2iGtmoOp-LEHUYp9CxOKA_lqXyPnY",
+    authDomain: "dennisforwanshow-38990.firebaseapp.com",
+    databaseURL: "https://dennisforwanshow-38990.firebaseio.com",
+    projectId: "dennisforwanshow-38990",
+    storageBucket: "dennisforwanshow-38990.appspot.com",
+    messagingSenderId: "837740790301"
+  };
+  firebase.initializeApp(config);
+</script>
 <!--
 Copyright (c) 2016 Google Inc.
 Licensed under the Apache License, Version 2.0 (the "License");
