--- a/test.html
+++ b/test.html
@@ -12,6 +12,7 @@
   };
   firebase.initializeApp(config);
 </script>
+<script src="https://www.gstatic.com/firebasejs/3.7.1/firebase-messaging.js"></script>
 <!--
 Copyright (c) 2016 Google Inc.
 Licensed under the Apache License, Version 2.0 (the "License");
