--- a/index.html
+++ b/index.html
@@ -15,11 +15,52 @@
 <body>
 <center>
 <font face ="Comic Sans MS">
-<h1>OH NO! DENNIS WENT BACK TO TAIWAN!</h1>
-<h3>Somehow, you ended up making it to our fallback server... maybe the server has too much traffic? <br>Either way, for now, you will see this page until our autobalencer decides you can have the honor of visiting the real dennis for wan show! So in the meantime, WATCH THIS!</h3>
-<br>
+<!--/* Ad4Game Javascript Tag */-->
+
+<ins data-a4g-zone=62776 data-a4g-block data-a4g-blockcampaign></ins><script type="text/javascript">(function (cdnPath, charset) {var el = document.createElement('SCRIPT'),body = document.body,asyncAjsSrc = cdnPath + '/async-ajs.min.js',isAsyncPresent = (function (scripts, asyncAjsSrc) {for (var i = 0; i < scripts.length; i++) {if (scripts[i].src === asyncAjsSrc) {return true;}}return false;} (document.getElementsByTagName('SCRIPT'), asyncAjsSrc));if (!isAsyncPresent) {el.type = 'text/javascript';el.async = true;el.src = asyncAjsSrc;if (charset) {el.setAttribute('data-a4g-charset', charset);}body.appendChild(el);}} (location.protocol === 'https:' ? 'https://ad4game-a.akamaihd.net' : 'http://cdn.ad4game.com', ''));</script><noscript><a href='//ads.ad4game.com/www/delivery/dck.php?n=acc911a3' target='_blank'><img src='//ads.ad4game.com/www/delivery/avw.php?zoneid=62776&amp;n=acc911a3' border='0' alt='' /></a></noscript>
+
+  <h1>OH NO! DENNIS WENT BACK TO TAIWAN!</h1>
+<!--/* Ad4Game Javascript Tag */-->
+
+<ins data-a4g-zone=62776 data-a4g-block data-a4g-blockcampaign></ins><script type="text/javascript">(function (cdnPath, charset) {var el = document.createElement('SCRIPT'),body = document.body,asyncAjsSrc = cdnPath + '/async-ajs.min.js',isAsyncPresent = (function (scripts, asyncAjsSrc) {for (var i = 0; i < scripts.length; i++) {if (scripts[i].src === asyncAjsSrc) {return true;}}return false;} (document.getElementsByTagName('SCRIPT'), asyncAjsSrc));if (!isAsyncPresent) {el.type = 'text/javascript';el.async = true;el.src = asyncAjsSrc;if (charset) {el.setAttribute('data-a4g-charset', charset);}body.appendChild(el);}} (location.protocol === 'https:' ? 'https://ad4game-a.akamaihd.net' : 'http://cdn.ad4game.com', ''));</script><noscript><a href='//ads.ad4game.com/www/delivery/dck.php?n=acc911a3' target='_blank'><img src='//ads.ad4game.com/www/delivery/avw.php?zoneid=62776&amp;n=acc911a3' border='0' alt='' /></a></noscript>
+
+  <h3>Somehow, you ended up making it to our fallback server... maybe the server has too much traffic? <br>Either way, for now, you will see this page until our autobalencer decides you can have the honor of visiting the real dennis for wan show! So in the meantime, WATCH THIS!</h3>
+<!--/* Ad4Game Javascript Tag */-->
+
+<ins data-a4g-zone=62776 data-a4g-block data-a4g-blockcampaign></ins><script type="text/javascript">(function (cdnPath, charset) {var el = document.createElement('SCRIPT'),body = document.body,asyncAjsSrc = cdnPath + '/async-ajs.min.js',isAsyncPresent = (function (scripts, asyncAjsSrc) {for (var i = 0; i < scripts.length; i++) {if (scripts[i].src === asyncAjsSrc) {return true;}}return false;} (document.getElementsByTagName('SCRIPT'), asyncAjsSrc));if (!isAsyncPresent) {el.type = 'text/javascript';el.async = true;el.src = asyncAjsSrc;if (charset) {el.setAttribute('data-a4g-charset', charset);}body.appendChild(el);}} (location.protocol === 'https:' ? 'https://ad4game-a.akamaihd.net' : 'http://cdn.ad4game.com', ''));</script><noscript><a href='//ads.ad4game.com/www/delivery/dck.php?n=acc911a3' target='_blank'><img src='//ads.ad4game.com/www/delivery/avw.php?zoneid=62776&amp;n=acc911a3' border='0' alt='' /></a></noscript>
+
+  <br>
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/wPrV3FSy3po" frameborder="0" allowfullscreen></iframe>
+<!--/* Ad4Game Footer Tag */-->
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+<script type='text/javascript'><!--//<![CDATA[
+   var ox_u = '//ads.ad4game.com/www/delivery/al.php?zoneid=62777&amp;layerstyle=footer&amp;position=bottom&amp;speed=3&amp;slide=0&amp;delay=-&amp;transparent=0';
+   if (document.context) ox_u += '&context=' + escape(document.context);
+   document.write("<scr"+"ipt type='text/javascript' src='" + ox_u + "'></scr"+"ipt>");
+//]]>--></script>
 
 </center>
 </body>
