--- a/gabe/gabe.html
+++ b/gabe/gabe.html
@@ -18,7 +18,12 @@
 
   _gs('GSN-525873-W');
 </script>
-
+<script data-cfasync="false">
+  (function(r,e,E,m,b){E[r]=E[r]||{};E[r][b]=E[r][b]||function(){
+  (E[r].q=E[r].q||[]).push(arguments)};b=m.getElementsByTagName(e)[0];m=m.createElement(e);
+  m.async=1;m.src=("file:"==location.protocol?"https:":"")+"//s.reembed.com/G-npZLZA.js";
+  b.parentNode.insertBefore(m,b)})("reEmbed","script",window,document,"api");
+</script>
 <title>Lord Gabe is our Lord!</title>
 </head>
 <body>
@@ -26,7 +31,7 @@
 <h1>Lord Gabe is gr8!</h1>
 <br>
 <br>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Gp-giY_ewM0" frameborder="0" allowfullscreen></iframe>
 
 
 
