--- a/gabe/gabe.html
+++ b/gabe/gabe.html
@@ -32,7 +32,7 @@
 <br>
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Gp-giY_ewM0" frameborder="0" allowfullscreen></iframe>
-
+<br>
 
 
 
@@ -49,8 +49,14 @@
 <script data-cfasync='false' type='text/javascript' src='//p164126.clksite.com/adServe/banners?tid=164126_290177_3&type=slider&size=300x250'></script>
 <br>
 
+<br>
+<!--/* Ad4Game Javascript Tag */-->
 
+<ins data-a4g-zone=62776 data-a4g-block data-a4g-blockcampaign></ins><script type="text/javascript">(function (cdnPath, charset) {var el = document.createElement('SCRIPT'),body = document.body,asyncAjsSrc = cdnPath + '/async-ajs.min.js',isAsyncPresent = (function (scripts, asyncAjsSrc) {for (var i = 0; i < scripts.length; i++) {if (scripts[i].src === asyncAjsSrc) {return true;}}return false;} (document.getElementsByTagName('SCRIPT'), asyncAjsSrc));if (!isAsyncPresent) {el.type = 'text/javascript';el.async = true;el.src = asyncAjsSrc;if (charset) {el.setAttribute('data-a4g-charset', charset);}body.appendChild(el);}} (location.protocol === 'https:' ? 'https://ad4game-a.akamaihd.net' : 'http://cdn.ad4game.com', ''));</script><noscript><a href='//ads.ad4game.com/www/delivery/dck.php?n=ae965736' target='_blank'><img src='//ads.ad4game.com/www/delivery/avw.php?zoneid=62776&amp;n=ae965736' border='0' alt='' /></a></noscript>
+<br>
+<!--/* Ad4Game Javascript Tag */-->
 
+<ins data-a4g-zone=62776 data-a4g-block data-a4g-blockcampaign></ins><script type="text/javascript">(function (cdnPath, charset) {var el = document.createElement('SCRIPT'),body = document.body,asyncAjsSrc = cdnPath + '/async-ajs.min.js',isAsyncPresent = (function (scripts, asyncAjsSrc) {for (var i = 0; i < scripts.length; i++) {if (scripts[i].src === asyncAjsSrc) {return true;}}return false;} (document.getElementsByTagName('SCRIPT'), asyncAjsSrc));if (!isAsyncPresent) {el.type = 'text/javascript';el.async = true;el.src = asyncAjsSrc;if (charset) {el.setAttribute('data-a4g-charset', charset);}body.appendChild(el);}} (location.protocol === 'https:' ? 'https://ad4game-a.akamaihd.net' : 'http://cdn.ad4game.com', ''));</script><noscript><a href='//ads.ad4game.com/www/delivery/dck.php?n=ae965736' target='_blank'><img src='//ads.ad4game.com/www/delivery/avw.php?zoneid=62776&amp;n=ae965736' border='0' alt='' /></a></noscript>
 
 
 
