--- a/ads/index.html
+++ b/ads/index.html
@@ -1,7 +1,11 @@
 <html>
 <head>
-<meta HTTP-EQUIV="REFRESH" content="0; url=http://go.oclasrv.com/afu.php?zoneid=1288397">
-<script>
+
+  <!--
+  <meta HTTP-EQUIV="REFRESH" content="0; url=http://go.oclasrv.com/afu.php?zoneid=1288397">
+-->
+  
+  <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -13,11 +17,10 @@
 </script>
 
 </head>
+<body>
 
+<iframe src = "http://go.oclasrv.com/afu.php?zoneid=1288397">
+  </iframe>
 
-
-http://go.oclasrv.com/afu.php?zoneid=1288397
-
-
-
+  </body>
 </html>
