--- a/ads/index.html
+++ b/ads/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<iframe src = "http://go.oclasrv.com/afu.php?zoneid=1288397">
+<iframe src = "https://go.oclasrv.com/afu.php?zoneid=1288397">
   </iframe>
 
   </body>
