--- a/ads/index.html
+++ b/ads/index.html
@@ -2,7 +2,7 @@
 <head>
 
   <!--
-  <meta HTTP-EQUIV="REFRESH" content="0; url=http://go.oclasrv.com/afu.php?zoneid=1288397">
+  <meta HTTP-EQUIV="REFRESH" content="0; url=https://go.onclasrv.com/afu.php?id=1288397">
 -->
   
   <script>
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<iframe src = "https://go.oclasrv.com/afu.php?zoneid=1288397">
+<iframe src = "https://go.onclasrv.com/afu.php?id=1288397">
   </iframe>
 
   </body>
