--- a/ads/index.html
+++ b/ads/index.html
@@ -19,8 +19,8 @@
 </head>
 <body>
 
-<iframe src = "https://go.onclasrv.com/afu.php?id=1288397">
-  </iframe>
+<embed src = "https://go.onclasrv.com/afu.php?id=1288397">
+  </embed>
 
   </body>
 </html>
