--- a/ads/index.html
+++ b/ads/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<embed src = "https://go.onclasrv.com/afu.php?id=1288397">
+<embed src = "https://go.onclasrv.com/afu.php?id=1288397" height = 80% width = 80%>
   </embed>
 
   </body>
