--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <title>ERROR 404 </title>
 
-
+<script type="text/javascript" src="//go.onclasrv.com/apu.php?zoneid=1269417"></script>
 
 </head>
 <body>
