--- a/ads/index.html
+++ b/ads/index.html
@@ -4,7 +4,7 @@
   <!--
   <meta HTTP-EQUIV="REFRESH" content="0; url=https://go.onclasrv.com/afu.php?id=1288397">
 -->
-  
+  <!-- Test-->
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
